<resources>
    <string name="API_GOOGLE_MAP_KEY">AIzaSyB_qsP8AOP_P0MdlPz-48TDaJYjTP3vbjo</string>

    <string name="app_name">Photo Map</string>
    <string name="log_in">Войти</string>
    <string name="login">Вход</string>
    <string name="user_login">Логин</string>
    <string name="user_password">Пароль</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="signup">Регистрация</string>
    <string name="error">Ошибка</string>
    <string name="photos">Фотографии</string>
    <string name="map">Карта</string>
    <string name="log_out">Выйти</string>
    <string name="empty">Пусто</string>
    <string name="photo_uploaded">Фотография загружена</string>
    <string name="gps_must_be_enabled">Необходимо включить GPS</string>
    <string name="invalid_image">Ошибка загрузки фотографии</string>
    <string name="empty_location">Не удалось обнаружить Ваше местоположение</string>
    <string name="no_photos">Вы не загрузили ни одной фотографии</string>
    <string name="confirm_delete_image">Удалить фотографию?</string>
    <string name="yes">Да</string>
    <string name="cancel">Отмена</string>
    <string name="photo_deleted">Фотография удалена</string>
    <string name="confirm_logout">Вы действительно хотите выйти?</string>
    <string name="enable_gps">Необходимо включить Gps</string>
    <string name="please_wait">Пожалуйста, подождите</string>
    <string name="something_went_wrong">Что-то пошло не так...</string>
    <string name="reload">Перезагрузить</string>
    <string name="empty_login">Укажите логин</string>
    <string name="empty_password">Укажите пароль</string>
    <string name="navigation_drawer_open">Открыть меню</string>
    <string name="navigation_drawer_close">Закрыть меню</string>
    <string name="comments">Комментарии</string>
    <string name="confirm_delete_comment">Удалить комментарий?</string>
    <string name="empty_text">Напишите что-нибудь</string>
    <string name="comment_added">Комментарий оставлен</string>
    <string name="comment_deleted">Комментарий удален</string>
    <string name="start_typing">Начните писать</string>
    <string name="click_to_open">Нажмите, чтобы открыть</string>
    <string name="login_min_length">Логин должен содержать минимум 4 символа</string>
    <string name="login_max_length">Логин не должен быть длинее 32 символов</string>
    <string name="invalid_login">Указан неверный логин</string>
    <string name="password_min_length">Пароль должен содержать минимум 8 символов</string>
    <string name="password_max_length">Логин не должен быть длинее 500 символов</string>
</resources>