<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.screens.authorization.login.LoginFragment"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/state_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_login"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            android:hint="@string/user_password"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            style="@style/Button.Accent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in"/>

        <Button
            android:id="@+id/btnSignup"
            style="@style/Button.Stroke"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"/>

    </LinearLayout>

    <include
        android:visibility="gone"
        layout="@layout/ui_state_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</FrameLayout>