<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"

    android:background="?colorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.screens.photo.PhotoActivity"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                android:layout_marginBottom="16dp"/>

            <TextView
                style="@style/TextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/comments"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="8dp"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/comments"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never"
                    android:layout_marginBottom="64dp"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    tools:listitem="@layout/item_comment"/>

                <TextView
                    android:id="@+id/state_empty"
                    android:visibility="gone"
                    style="@style/TextDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empty"
                    android:layout_marginLeft="24dp"/>

                <include
                    android:visibility="gone"
                    layout="@layout/ui_state_loading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"/>

                <include
                    android:visibility="gone"
                    layout="@layout/ui_state_reload"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="80dp"/>

            </FrameLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="?colorCard"
        android:elevation="4dp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/start_typing"
            android:minHeight="40dp"
            android:background="@null"/>

        <ImageView
            style="@style/Widget.AppCompat.ActionButton"
            android:id="@+id/btn_send"
            android:layout_width="30dp"
            android:layout_marginLeft="8dp"
            android:layout_height="match_parent"
            android:background="?selectableItemBackgroundBorderless"
            app:tint="?colorPrimary"
            android:src="@drawable/ic_send"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

